fix(pre): prevent spilling over on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ img {
 }
 
 pre {
-  @apply p-4 self-stretch;
+  @apply p-4 self-stretch overflow-auto;
 }
 
 td,
